# microservices-logging-demo

./: .gitignore  README.md  docker-compose.yml  init-ws.py
observability/prometheus/: prometheus.yml
scripts/unix/: test_services.sh
scripts/windows/: test_services.bat
services/api_gateway/: Dockerfile  init.py  requirements.txt
services/api_gateway/src/: main.py
services/order_service/: Dockerfile
services/order_service/src/: main.py
services/product_service/: Dockerfile  requirements.txt
services/product_service/src/: main.py
shared/: README.md  __init__.py  pyproject.toml
shared/logging/: __init__.py  filters.py  formatters.py  logger.py  tracing.py
